Allow "local" to listen on arbitrary IP.  Insecure.

--- a/tiny.config
+++ b/tiny.config
@@ -1,5 +1,6 @@
 [config]
 local.server
+local.server.ip = 0.0.0.0
 local.server.port = 9090
 whitelist.file = whitelist
 iptables.path = /sbin/iptables
