Rename config file

--- a/rfw.config
+++ b/rfw.config
@@ -2,6 +2,6 @@
 local.server
 local.server.ip = 0.0.0.0
 local.server.port = 9090
-whitelist.file = whitelist
+whitelist.file = /etc/rfw/whitelist
 iptables.path = /sbin/iptables
 default.expire = 5m
